# robopiano

./: .gitignore  AGENTS.md  HowToRun.md  README.md
Etude/: README.md  pyproject.toml  requirements.txt
Etude/docs/: integration_debug_report.md  testing_and_local_batch_plan.md
Etude/local_batch/: README.md  robustness_configs.txt  run_etude_cpu_eval.echo  run_etude_gpu_train.echo  run_etude_robustness_array.echo  run_etude_rollout_eval.echo
Etude/scripts/: evaluate_tracker.py  export_tracker.py  extract_tracking_dataset.py  queue_etude_experiments.sh  rollout_tracker.py  run_experiment.py  smoke_check.sh  summarize_results.py  train_controller.py  tune_pd.py  visualize_tracking.py
Etude/tests/: test_controller_factory.py  test_event_metrics.py  test_experiments.py  test_failure_attribution.py  test_feature_builder.py  test_fingertip_phase_features.py  test_fingertip_phase_losses.py  test_hierarchical_controller.py  test_inverse_dynamics_blocks.py  test_inverse_dynamics_controller.py  test_key_aware_features.py  test_key_losses.py  test_losses.py  test_pd_controller.py  test_pd_scheduled.py  test_plan_corruption.py  test_replay_buffer.py  test_residual_safety.py  test_rollout_objectives.py  test_state_mapping.py  test_temporal_context.py  test_trajectory_io.py  test_universal_scaffold.py
RoboDiffusion/: README.md  pyproject.toml
RoboDiffusion/scripts/: evaluate_policy.py  preprocess_rp1m.py  train_policy.py
RoboDiffusion/tests/: test_data_windows.py  test_model_shapes.py  test_receding_horizon.py  test_training_smoke.py
Sonata/: PRIMITIVE_ONLINE_EVAL.md  README.md  README_stage1_safe_ml.md  STAGE1_ONLINE_PRIMITIVES.md  STAGE3_RESIDUAL_CONTROL.md  TODO_HPC.md  pyproject.toml  requirements.txt
Sonata/docs/: causal_primitive_evaluation.md
Sonata/scripts/: analyze_primitive_rollouts.py  audit_no_piano_state_leakage.py  audit_stage1_segment_budget.py  build_primitive_remap.py  build_stage2_primitive_quality_csv.py  closed_loop_primitives.py  compare_debug_rollouts.py  evaluate.py  evaluate_external.py  evaluate_primitive_dropout.py  evaluate_primitives_online.py  evaluate_stage1_rollout.py  evaluate_stage2_rollout.py  migrate_segment_chunks.py  prepare_external_midi.py  prepare_rp1m.py  run_pipeline.py  run_primitive_online_eval.slurm  run_stage1_safe_ml.sh  slurm_stage1_safe_ml.sh  tmux_stage1_safe_ml.sh  train_diffusion.py  train_joint_refine.py  train_primitives.py  train_transformer.py  validate_primitives_contract.py  visualize_primitives.py  visualize_rollout.py
Sonata/slurm/: run_stage2_gmr_rollout_outputs_run4.sbatch  sonata_tmux_train_primitives.sh  sonata_tmux_train_transformer_stage2.sh  train_diffusion_stage3_outputs_run4.sbatch  train_primitives_cmp_stage1.sbatch  train_primitives_cmp_stage1_resume.sbatch  train_transformer_stage2_outputs_run4.sbatch  train_transformer_stage2_primitive_remap.sbatch
Sonata/tests/: test_attribution.py  (+9 more)
(+466 files in other folders)
