[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "etude-controller"
version = "0.1.0"
description = "Etude: closed-loop trajectory-following control for RoboPianist"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "Apache-2.0"}
authors = [{name = "Jack Landers"}]
dependencies = [
  "numpy>=1.24",
  "pandas>=2.0",
  "PyYAML>=6.0",
  "tqdm>=4.66",
  "matplotlib>=3.7",
  "torch>=2.2",
  "zarr>=2.16,<3",
  "wandb>=0.17",
  "joblib>=1.3",
]

[project.optional-dependencies]
full = [
  "mujoco>=3.1",
  "dm-control>=1.0",
  "imageio>=2.34",
  "imageio-ffmpeg>=0.4",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.black]
target-version = ["py310"]

[tool.ruff]
line-length = 100
target-version = "py310"
select = ["E", "F", "I", "W"]
ignore = ["E501"]

[tool.pytest.ini_options]
addopts = "--import-mode=importlib"
