[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "sonata-3"
version = "0.1.0"
description = "Sonata-3: Segmented GMR -> Transformer -> Diffusion for RoboPianist"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "Apache-2.0"}
authors = [{name = "OpenAI Codex"}]
dependencies = [
  "numpy>=1.24",
  "pandas>=2.0",
  "PyYAML>=6.0",
  "tqdm>=4.66",
  "matplotlib>=3.7",
  "scikit-learn>=1.4",
  "joblib>=1.3",
  "torch>=2.2",
  "zarr>=2.16",
  "wandb>=0.17",
]

[project.optional-dependencies]
full = [
  "pyarrow>=15.0",
  "note-seq>=0.0.5",
  "mujoco>=3.1",
  "jax>=0.4.28",
  "flax>=0.8.4",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.black]
target-version = ["py310"]

[tool.ruff]
line-length = 100
target-version = "py310"
select = ["E", "F", "I", "W"]
ignore = ["E501"]
